--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
-- include: audit.yml
-- include: disable.yml
-- include: fips.yml
+- include_tasks: audit.yml
+- include_tasks: disable.yml
+- include_tasks: fips.yml
   when:
   - grub2_enable_fips_mode | bool
-- include: install.yml
-- include: misc.yml
-- include: pam.yml
-- include: permissions.yml
-- include: repos.yml
-- include: ssh.yml
-- include: tcp.yml
+- include_tasks: install.yml
+- include_tasks: misc.yml
+- include_tasks: pam.yml
+- include_tasks: permissions.yml
+- include_tasks: repos.yml
+- include_tasks: ssh.yml
+- include_tasks: tcp.yml
