--- a/molecule/docker/molecule.yml
+++ b/molecule/docker/molecule.yml
@@ -9,7 +9,7 @@ lint:
     config-file: .yamllint
 platforms:
   - name: instance
-    image: registry.access.redhat.com/ubi7/ubi:7.8
+    image: centos:7
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     command: /usr/sbin/init
