--- a/tasks/fips.yml
+++ b/tasks/fips.yml
@@ -1,5 +1,5 @@
 ---
-- name: check prelink binary installed
+- name: Check prelink binary installed
   stat:
     path: /usr/sbin/prelink
   register: prelink_exists
@@ -24,7 +24,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: disable prelink
+- name: Disable prelink
   lineinfile:
     dest: /etc/sysconfig/prelink
     regexp: ^#?PRELINKING
@@ -56,7 +56,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: revert prelinking binaries
+- name: Revert prelinking binaries
   command: /usr/sbin/prelink -ua
   when:
   - prelink_exists.stat.exists
@@ -112,7 +112,7 @@
   - DISA-STIG-RHEL-07-021350
 
 # installs dracut-fips as a dependency
-- name: Ensure dracut-fips-aesni is installed
+- name: Ensure dracut-fips-aesni is installed | AC.3.014 | SC.3.177
   package:
     name: dracut-fips-aesni
     state: present
@@ -144,7 +144,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: Ensure dracut-fips is installed
+- name: Ensure dracut-fips is installed | AC.3.014 | SC.3.177
   package:
     name: dracut-fips
     state: present
@@ -204,7 +204,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: check fips argument exists
+- name: Check fips argument exists
   command: grep 'GRUB_CMDLINE_LINUX.*fips=' /etc/default/grub
   failed_when: false
   register: fipsargcheck
@@ -230,7 +230,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: replace existing fips argument
+- name: Replace existing fips argument
   replace:
     path: /etc/default/grub
     regexp: fips=.
@@ -262,7 +262,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: add fips argument
+- name: Add fips argument | AC.3.014 | SC.3.177
   replace:
     path: /etc/default/grub
     regexp: (GRUB_CMDLINE_LINUX=.*)"
@@ -294,7 +294,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: get boot device uuid
+- name: Get boot device UUID
   command: findmnt --noheadings --output uuid --target /boot
   register: bootuuid
   check_mode: false
@@ -319,7 +319,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: check boot argument exists
+- name: Check boot argument exists
   command: grep 'GRUB_CMDLINE_LINUX.*boot=' /etc/default/grub
   failed_when: false
   register: bootargcheck
@@ -345,7 +345,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: replace existing boot argument
+- name: Replace existing boot argument
   replace:
     path: /etc/default/grub
     regexp: boot=\w*-\w*-\w*-\w*-\w*
@@ -377,7 +377,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: add boot argument
+- name: Add boot argument
   replace:
     path: /etc/default/grub
     regexp: (GRUB_CMDLINE_LINUX=.*)"
@@ -409,7 +409,7 @@
   - CJIS-5.10.1.2
   - DISA-STIG-RHEL-07-021350
 
-- name: update bootloader menu for fips
+- name: Update bootloader menu for fips | AC.3.014 | SC.3.177
   command: /sbin/grubby --update-kernel=ALL --args="fips=1"
   when:
   - ansible_virtualization_role != "guest" or ansible_virtualization_type != "docker"
