--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,11 +4,43 @@ remove_package_list:
   - rsh
   - telnet
 
+ssh_banner: |
+  #############################################################################
+  #                                                                           #
+  #   ABC Company's information systems, networks, and other assets      #
+  #   (Company assets) are only for authorized use by authorized users        #
+  #   and must be used only for Company business purposes and limited         #
+  #   personal use as permitted by Company Policy 183-RP. Access to Company   #
+  #   assets for any other use is not authorized. Use of Company assets       #
+  #   constitutes acknowledgement and consent to monitoring, recording,       #
+  #   or blocking - by the Company or Company-authorized third parties - of   #
+  #   any such use by you without further notice, for any lawful purpose.     #
+  #   Such monitoring, recording and blocking include your personal           #
+  #   communications and information (including communications via a          #
+  #   personal, non-ABC email or social-media account accessed through   #
+  #   a Company asset). Company assets, including encrypted data on them,     #
+  #   are actively monitored for lawful purposes. "Monitoring" includes       #
+  #   interception or review of electronic communications and other           #
+  #   information, while in transmission or stored. Persons using Company     #
+  #   assets have no reasonable expectation of privacy or confidentiality     #
+  #   in any such electronic communications or other information or other     #
+  #   use of Company assets. Your communications, information, and related    #
+  #   data collected through monitoring may be used and disclosed to third    #
+  #   parties, including government entities, for any lawful purpose,         #
+  #   including criminal or security investigations, information security,    #
+  #   or adverse personnel action including termination.                      #
+  #                                                                           #
+  #############################################################################
 
 var_auditd_flush: incremental_async
-var_selinux_state: enforcing
 var_selinux_policy_name: targeted
+var_selinux_state: permissive
+var_accounts_max_concurrent_login_sessions: '10'
 var_accounts_password_minlen_login_defs: '15'
+var_accounts_passwords_pam_faillock_deny: '10'
+var_accounts_passwords_pam_faillock_fail_interval: '900'
+var_accounts_passwords_pam_faillock_unlock_time: '0'
+var_accounts_user_umask: '027'
 var_password_pam_ucredit: '-1'
 var_password_pam_maxrepeat: '3'
 var_password_pam_ocredit: '-1'
@@ -17,12 +49,7 @@ var_password_pam_minlen: '15'
 var_password_pam_maxclassrepeat: '4'
 var_password_pam_dcredit: '-1'
 var_password_pam_difok: '4'
-var_accounts_passwords_pam_faillock_deny: '10'
-var_accounts_passwords_pam_faillock_unlock_time: '0'
 var_password_pam_unix_remember: '5'
-var_accounts_passwords_pam_faillock_fail_interval: '900'
-var_accounts_max_concurrent_login_sessions: '10'
-var_accounts_user_umask: '027'
 var_sshd_set_keepalive: '10h'
 sshd_approved_macs: hmac-sha2-512,hmac-sha2-256,hmac-sha1,hmac-sha1-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-sha2-512-etm@openssh.com
 sshd_idle_timeout_value: '600'
